added week 8 to folder

--- a/week-07/day-4/src/main/resources/templates/login.html
+++ b/week-07/day-4/src/main/resources/templates/login.html
@@ -6,11 +6,9 @@
 </head>
 <body>
 <h1>Welcome to Programmer Fox Club!</h1>
+<p>Please provide a name, so you can associate it to your pet!</p>
 
-<p th:text>Please provide a name, so you can associate it to your pet!</p>
-
-
-<form action="/web/foxmain/foxinformation" method="get">
+<form action="/main/foxinformation" method="get">
 
     Name of the selected Fox:<br>
     <input type="text" name="name"><br>
@@ -18,6 +16,6 @@
 </form>
 <button>GO</button>
 <br>
-<a href="/web/foxmain">BACK TO THE MAIN PAGE</a> <br>
+<a href="/main">BACK TO THE MAIN PAGE</a> <br>
 </body>
 </html>
