--- a/week-07/day-3/src/main/resources/templates/EmailValidation.html
+++ b/week-07/day-3/src/main/resources/templates/EmailValidation.html
@@ -5,7 +5,8 @@
     <title>Email Validation</title>
 </head>
 <body>
-<h1 th:style="(${inspectedEmailAddress} ? 'color:green' : 'color:red')" th:text="${emailAddress} + (${inspectedEmailAddress} ? ' is a valid email address' : ' is not a valid email address')"></h1>
+<h1 th:style="(${inspectedEmailAddress} ? 'color:green' : 'color:red')"
+    th:text="${emailAddress} + (${inspectedEmailAddress} ? ' is a valid email address' : ' is not a valid email address')"></h1>
 
 </body>
 </html>
