--- a/week-07/day-4/src/main/resources/templates/mainPage.html
+++ b/week-07/day-4/src/main/resources/templates/mainPage.html
@@ -5,7 +5,7 @@
     <title>Main</title>
 </head>
 <body>
-<img src="https://www.google.cz/url?sa=i&source=images&cd=&ved=2ahUKEwjPrufRzLHiAhVRDewKHWzcD6oQjRx6BAgBEAU&url=https%3A%2F%2Fgerman.alibaba.com%2Fproduct-detail%2F1500w-modified-sine-wave-ups-inverter-circuit-diagram-with-pwm-mppt-charge-controller-1797391945.html&psig=AOvVaw3mti6i7rIo6xOHL6QH2boQ&ust=1558699051280798">
+<img src ="/greenfox.png" >
 <p1>THIS IS MAIN PAGE</p1> <br>
 
 
