finished Database Integration

--- a/week-08/day-2/Project with MySQL/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/Project with MySQL/src/main/resources/templates/todolist.html
@@ -7,10 +7,8 @@
 </head>
 <body>
 
-<a href="/todo/add">Add new ToDo</a>
-
 <h1>Todos for Today:</h1>
-<table>
+<table class="table table-striped">
     <thead>
     <tr>
         <td>ID</td>
@@ -24,7 +22,9 @@
     <tbody>
     <tr th:each="todo : ${todos}">
         <td th:text="${todo.getId()}"></td>
-        <td th:text="${todo.getTitle()}"></td>
+        <td>
+            <a th:href="@{'/todo/{id}/detail'(id=${todo.getId()})}" th:text="${todo.getTitle()}"></a>
+        </td>
         <td th:text="${todo.isDone()}"></td>
         <td th:text="${todo.isUrgent()}"></td>
         <td>
@@ -36,6 +36,8 @@
     </tr>
     </tbody>
 </table>
+
+<a href="/todo/add">Add new ToDo</a>
 
 </body>
 </html>
