working on bootstrap

--- a/week-08/day-2/Project with MySQL/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/Project with MySQL/src/main/resources/templates/todolist.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
+
     <meta charset="UTF-8">
-    <title>ToDo</title>
+    <title>To Do Application</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 </head>
+
 <body>
+<div class="container">
+    <h1>Todos for Today:</h1>
+</div>
+<div class="container">
+    <table class="table table-striped table-bordered" style="text-align: center; font-size: 20px">
+        <thead class="thead-dark" style="text-align: left">
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">ACTION</td>
+            <th scope="col">DONE</td>
+            <th scope="col">URGENT</td>
+            <th scope="col"></td>
+            <th scope="col"></td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr scope="row" th:each="todo : ${todos}">
+            <td th:text="${todo.getId()}"></td>
+            <td>
+                <a th:href="@{'/todo/{id}/detail'(id=${todo.getId()})}" th:text="${todo.getTitle()}"></a>
+            </td>
+            <td th:switch="${todo.isDone()}">
+                <p th:case="true" class="material-icons" style="color: green; font-size: 40px">done</p>
+                <p th:case="false" class="material-icons" style="color: red; font-size: 40px">clear</p>
+            </td>
+            <td th:switch="${todo.isUrgent()}">
+                <p th:case="true" class="material-icons" ; style="font-size: 50px">notification_important</p>
+            </td>
+            <td>
+                <a th:href="@{'/todo/{id}/delete'(id=${todo.getId()})}" class="material-icons" style="color: black; font-size: 40px">delete</a>
+            </td>
+            <td>
+                <a th:href="@{'/todo/{id}/edit'(id=${todo.getId()})}" class="btn btn-info btn-sm">Edit</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
-<h1>Todos for Today:</h1>
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <td>ID</td>
-        <td>ACTION</td>
-        <td>DONE</td>
-        <td>URGENT</td>
-        <td>DELETE</td>
-        <td>EDIT</td>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="todo : ${todos}">
-        <td th:text="${todo.getId()}"></td>
-        <td>
-            <a th:href="@{'/todo/{id}/detail'(id=${todo.getId()})}" th:text="${todo.getTitle()}"></a>
-        </td>
-        <td th:text="${todo.isDone()}"></td>
-        <td th:text="${todo.isUrgent()}"></td>
-        <td>
-            <a th:href="@{'/todo/{id}/delete'(id=${todo.getId()})}">Delete</a>
-        </td>
-        <td>
-            <a th:href="@{'/todo/{id}/edit'(id=${todo.getId()})}">Edit</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
-
-<a href="/todo/add">Add new ToDo</a>
+<div class="container">
+    <a href="/todo/add" class="material-icons" style="color: blue; font-size: 50px">create_new_folder</a>
+</div>
 
 </body>
 </html>
